--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="./assets/img/drone-images/slide 2.PNG" class="d-block w-100" alt="..." />
+          <img   style="height: 100vh; width: 100%; object-fit: cover;"  src="./assets/img/drone-images/slide 2.PNG" class="d-block w-100" alt="..." />
           <!-- <div class="carousel-caption d-none d-md-block">
             <h5>First slide label</h5>
             <p>
@@ -131,7 +131,7 @@
           </div> -->
         <!-- </div> -->
         <div class="carousel-item">
-          <img src="./assets/img/drone-images/slide1.PNG" class="d-block w-100" alt="..." />
+          <img  style="height: 100vh; width: 100%; object-fit: cover;"  src="./assets/img/drone-images/slide1.PNG" class="d-block w-100" alt="..." />
           <!-- <div class="carousel-caption d-none d-md-block">
             <h5>Third slide label</h5>
             <p>
@@ -175,11 +175,10 @@
 
           <p class="mt-3">
           </p>
-
         </div>
         <div class="row gy-4 mt-5">
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <img src="assets/img/drone-images/ImageGen Apr 3, 2025, 05_27_06 PM.png" class="img-fluid mb-4" alt="" />
+            <img    src="assets/img/drone-images/ImageGen Apr 3, 2025, 05_27_06 PM.png" class="img-fluid mb-4" alt="" />
 
           </div>
           <div class="col-lg-6 specs-container" data-aos="fade-up" data-aos-delay="250">
@@ -321,7 +320,7 @@
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <img src="assets/img/drone-images/passenger drone.PNG" class="img-fluid mb-4" alt="" />
+            <img src="assets/img/drone-images/passenger drone 3.png" class="img-fluid mb-4" alt="" />
           </div>
         </div>
       </div>
