--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img   style="height: 100vh; width: 100%; object-fit: cover;"  src="./assets/img/drone-images/slide 2.PNG" class="d-block w-100" alt="..." />
+          <img   style="height: 100vh; width: 100%; object-fit: cover;"  src="./assets/img/drone-images/slide1.PNG" class="d-block w-100" alt="..." />
           <!-- <div class="carousel-caption d-none d-md-block">
             <h5>First slide label</h5>
             <p>
@@ -131,7 +131,7 @@
           </div> -->
         <!-- </div> -->
         <div class="carousel-item">
-          <img  style="height: 100vh; width: 100%; object-fit: cover;"  src="./assets/img/drone-images/slide1.PNG" class="d-block w-100" alt="..." />
+          <img  style="height: 100vh; width: 100%; object-fit: cover;"  src="./assets/img/drone-images/slide 2.PNG" class="d-block w-100" alt="..." />
           <!-- <div class="carousel-caption d-none d-md-block">
             <h5>Third slide label</h5>
             <p>
@@ -398,7 +398,7 @@
     <section id="contact" class="contact section">
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2 class="mt-5">Contact</h2>
+        <h2 class="mt-5" style="color: white;" >Contact</h2>
         <!-- <p>Necessitatibus eius consequatur</p> -->
       </div>
       <!-- End Section Title -->
