--- a/accsories.html
+++ b/accsories.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-  <title>Recnaile</title>
+  <title>Skycruze</title>
   <meta name="description" content="" />
   <meta name="keywords" content="" />
 
@@ -51,7 +51,7 @@
         <!-- <h1 class="sitename">RECNAILE</h1> -->
         <div>
           <img src="assets/img/recnaile/White with Red Logo only.png" alt="" />
-          <p class="logo-name">RECNAILE</p>
+          <p class="logo-name">SKYCRUZE</p>
         </div>
       </a>
       <!-- <img src="assets/img/recnaile/Recnaile Logo final Blue red.png" alt=""> -->
@@ -191,13 +191,13 @@
         <div class="col-lg-4 col-md-6 footer-about">
 
           <div class="footer-contact pt-3">
-            <h4>RECNAILE PRIVATE LIMITED</h4>
+            <h4>SKYCRUZE PRIVATE LIMITED</h4>
             <p>No. 49, ESI Outer Ring Road </p>
             <p>Hosur, Tamil Nadu, India - 635126.</p>
             <p class="mt-3">
               <strong>Phone:</strong> <span>+1 5589 55488 55</span>
             </p>
-            <p><strong>Email:</strong> <span>info@recnaile.com</span></p>
+            <p><strong>Email:</strong> <span>info@skycruze.com</span></p>
           </div>
           <div class="social-links d-flex mt-4">
             <!-- <a href=""><i class="bi bi-twitter-x"></i></a>
@@ -281,7 +281,7 @@
 
     <div class="container copyright text-center mt-4">
       <p>
-        © <span>Copyright</span> <strong class="px-1 sitename">Recnaile</strong>
+        © <span>Copyright</span> <strong class="px-1 sitename">Skycruze</strong>
         <span>All Rights Reserved</span>
       </p>
       <!-- <div class="credits">
