--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
             <!-- <a href=""><i class="bi bi-twitter-x"></i></a>
               <a href=""><i class="bi bi-facebook"></i></a>
               <a href=""><i class="bi bi-instagram"></i></a> -->
-            <a href="https://www.linkedin.com/company/recnaile/posts/?feedView=all" target="_blank"
+            <a href="https://www.linkedin.com/company/skycruze/about/" target="_blank"
               rel="noopener noreferrer"><i class="bi bi-linkedin"></i></a>
 
 
