--- a/index.html
+++ b/index.html
@@ -605,13 +605,13 @@
         <div class="col-lg-4 col-md-6 footer-about">
 
           <div class="footer-contact pt-3">
-            <h4>SKYCRUZE PRIVATE LIMITED</h4>
+            <h4>RECNAILE PRIVATE LIMITED</h4>
             <p>No. 49, ESI Outer Ring Road </p>
             <p>Hosur, Tamil Nadu, India - 635126.</p>
             <p class="mt-3">
               <strong>Phone:</strong> <span>+91 9566799733</span>
             </p>
-            <p><strong>Email:</strong> <span>info@skycruze.com</span></p>
+            <p><strong>Email:</strong> <span>info@recnaile.com</span></p>
           </div>
           <div class="social-links d-flex mt-4">
             <!-- <a href=""><i class="bi bi-twitter-x"></i></a>
